# brewlog

./: .env.example  .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  fly.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  push.yml
migrations/: 0001_auth.sql  0001_init.sql  0002_auth.sql  0002_coffee.sql  0003_activities.sql  0003_sessions.sql  0004_add_bags.sql  0004_timeline_and_usage.sql  0005_add_action_to_timeline.sql  0005_brew_gear_indexes.sql  0006_add_gear.sql  0006_stats_cache.sql  0007_entity_images.sql  0007_update_timeline_constraint_for_gear.sql  0007_update_timeline_for_gear.sql  0008_bag_finished_at_datetime.sql  0008_remove_gear_notes.sql  0009_add_brews.sql  0010_denormalize_timeline.sql  0011_add_filter_paper.sql  0012_add_cafes.sql  0013_add_cups.sql  0014_remove_cafe_notes.sql  0015_remove_cup_notes.sql  0016_remove_roaster_notes.sql  0017_passkey_auth.sql  0018_remove_password_hash.sql  0019_add_ai_usage.sql  0020_remove_cup_rating.sql  0021_add_brew_notes.sql
scripts/: bootstrap-db.sh
src/: lib.rs  main.rs
src/application/: auth.rs  errors.rs  mod.rs  server.rs  state.rs
src/application/routes/: account.rs  add.rs  auth.rs  backup.rs  bags.rs  brews.rs  cafes.rs  checkin.rs  cups.rs  data.rs  gear.rs  home.rs  macros.rs  mod.rs  roasters.rs  roasts.rs  scan.rs  support.rs  timeline.rs  tokens.rs  webauthn.rs
src/application/routes/api/: account.rs  backup.rs  bags.rs  brews.rs  cafes.rs  checkin.rs  cups.rs  gear.rs  images.rs  macros.rs  mod.rs  roasters.rs  roasts.rs  scan.rs  tokens.rs  webauthn.rs
src/application/routes/app/: account.rs  add.rs  admin.rs  auth.rs  bags.rs  brews.rs  cafes.rs  (+11 more)
src/application/services/: bags.rs  brews.rs  cups.rs  mod.rs  roasts.rs  stats.rs  timeline_refresh.rs
src/cli/: mod.rs  roasters.rs  roasts.rs  tokens.rs
src/client/: mod.rs  roasters.rs  roasts.rs  tokens.rs
src/domain/: ai_usage.rs  bags.rs  brews.rs  cafes.rs  countries.rs  country_stats.rs  cups.rs  entity_type.rs  errors.rs  formatting.rs  gear.rs  ids.rs  images.rs  listing.rs  mod.rs  origins.rs  registration_tokens.rs  repositories.rs  roasters.rs  roasts.rs  sessions.rs  stats.rs  timeline.rs  tokens.rs  users.rs
src/domain/analytics/: country_stats.rs  mod.rs  stats.rs  timeline.rs
src/domain/auth/: mod.rs  passkey_credentials.rs  registration_tokens.rs  sessions.rs  tokens.rs  users.rs
src/domain/coffee/: bags.rs  brews.rs  cafes.rs  cups.rs  gear.rs  mod.rs  nearby_cafes.rs  roasters.rs  roasts.rs
src/infrastructure/: ai.rs  auth.rs  backup.rs  database.rs  foursquare.rs  image_processing.rs  mod.rs  osm.rs  webauthn.rs
src/infrastructure/client/: backup.rs  bags.rs  brews.rs  cafes.rs  cups.rs  gear.rs  mod.rs  roasters.rs  roasts.rs  timeline.rs  tokens.rs
src/infrastructure/repositories/: ai_usage.rs  bags.rs  brews.rs  cafes.rs  cups.rs  gear.rs  images.rs  macros.rs  mod.rs  pagination.rs  passkey_credentials.rs  registration_tokens.rs  roasters.rs  roasts.rs  sessions.rs  stats.rs  timeline_events.rs  tokens.rs  users.rs
src/presentation/: mod.rs  templates.rs  views.rs
src/presentation/cli/: backup.rs  bags.rs  brews.rs  cafes.rs  cups.rs  gear.rs  macros.rs  mod.rs  roasters.rs  roasts.rs  timeline.rs  tokens.rs
src/presentation/web/: templates.rs  views.rs
src/server/: auth.rs  mod.rs  server.rs
src/server/routes/: auth.rs  mod.rs  roasters.rs  roasts.rs  support.rs  timeline.rs  tokens.rs
static/: site.webmanifest
static/css/: input.css
static/js/: image-utils.js  location.js  webauthn.js
static/js/components/: chip-scroll.js  donut-chart.js  image-upload.js  photo-capture.js  searchable-select.js  world-map.js
templates/: account.html  add.html  bags.html  base.html  brews.html  cafe_detail.html  cafes.html  checkin.html  checkin.js  cli_callback.html  cups.html  data.html  extract.js  gear.html  home.html  input.css  login.html  nav.html  register.html  roast_detail.html  roaster_detail.html  roasters.html  roasts.html  scan.html  styles.css  timeline.html  webauthn.js
templates/components/: photo-capture.js  searchable-select.js
templates/pages/: account.html  add.html  admin.html  bag.html  brew.html  cafe.html  checkin.html  cli_callback.html  cup.html  data.html  edit_bag.html  edit_brew.html  edit_cafe.html  edit_cup.html  edit_gear.html  edit_roast.html  edit_roaster.html  gear.html  home.html  login.html  register.html  roast.html  roaster.html  stats.html  timeline.html
templates/partials/: bag_card.html  bag_list.html  brew_card.html  brew_list.html  cafe_list.html  cup_list.html  detail_cards.html  entity_icon.html  gear_list.html  histogram.html  icons.html  image_section.html  image_upload.html  location_search.html  nav.html  nearby_cafes.html  roast_list.html  roast_options.html  roaster_list.html  scan_input.html  stats_map.html  tab_bar.html  table.html  timeline_chunk.html  timeline_month.html
templates/partials/forms/: quick_notes.html  scan_result_form.html
templates/partials/lists/: bag_list.html  brew_list.html  cafe_list.html  cup_list.html  gear_list.html  roast_list.html  roaster_list.html  table.html
tests/: server.rs
tests/cli/: backup_cli.rs  bags_cli.rs  brews_cli.rs  cafes_cli.rs  cups_cli.rs  gear_cli.rs  helpers.rs  main.rs  roasters_cli.rs  roasts_cli.rs  test_macros.rs  timeline_cli.rs  tokens_cli.rs
tests/e2e/: bag_tests.rs  brew_tests.rs  checkin_tests.rs  data_tests.rs  delete_tests.rs  detail_tests.rs  edit_tests.rs  image_tests.rs  main.rs  navigation_tests.rs  roaster_tests.rs  scan_tests.rs  timeline_tests.rs
tests/e2e/helpers/: auth.rs  browser.rs  chromedriver.rs  forms.rs  mod.rs  wait.rs
tests/server/: auth_api.rs  backup.rs  bags_api.rs  brews_api.rs  cafes_api.rs  checkin_api.rs  cups_api.rs  datastar.rs  extraction_api.rs  form_submissions.rs  gear_api.rs  helpers.rs  images_api.rs  main.rs  nearby_api.rs  pages.rs  roasters.rs  roasters_api.rs  roasts.rs  roasts_api.rs  scan_api.rs  static_assets.rs  stats_api.rs  test_macros.rs  timeline.rs  webauthn_api.rs
(+43 files in other folders)
