[package]
name = "brewlog"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
askama = "0.12"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
sha2 = "0.10"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "chrono",
    "any",
    "migrate",
] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-cookies = "0.10"
slug = "0.1.6"

[dev-dependencies]
portpicker = "0.1"
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
tempfile = "3.8"
wiremock = "0.6"
once_cell = "1.19"

[[test]]
name = "cli"
path = "tests/cli/main.rs"
harness = true

[profile.test]
# Run CLI tests serially to share single server instance
opt-level = 0

[[test]]
name = "server"
path = "tests/server/main.rs"
harness = true
